workloads/qbittorrent/kustomize/overlays/prod/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent

spec:
  replicas: 1
  revisionHistoryLimit: 3

  template:
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest

          # resources:
          #   limits:
          #     cpu:  0m
          #     memory: 0Mi
          #   requests:
          #     cpu: 0m
          #     memory: 0Mi

          # TODO: Probes
